tests/fixtures/invalid/divmod_none_dict.py
# Cannot call divmod() with None, Dict[str, int]
x = divmod(None, {"a": 1})
